--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
 body {
   font-family: sans-serif;
 }
+.wiki-img {
+  width: 100%;
+}
+.wiki-item {
+  margin-left: 10px;
+  margin-right: 10px;
+  box-shadow: 5px 5px;
+}
+.wiki-content {
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
