--- a/src/styles.css
+++ b/src/styles.css
@@ -14,4 +14,18 @@ body {
   padding-right: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.wiki-text {
+  min-width: 50%;
+  max-width: 50%;
+}
+.img-container {
+  min-width: 50%;
+  max-width: 50%;
+}
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
