--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ body {
   padding-bottom: 10px;
   padding-left: 10px;
   display: flex;
-  flex-direction: row-reverse;
+  flex: row-reverse;
 }
 .wiki-text {
   min-width: 50%;
