--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,12 @@ body {
   padding-right: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
-  flex-direction: row-reverse;
+  display: flex;
+}
+@media only screen and (max-width: 600px) {
+  .wiki-content {
+    flex-direction: row-reverse;
+  }
 }
 .wiki-text {
   min-width: 50%;
